--- a/ITC.InfoTrack/Areas/TokenGenerate/Views/TokenGenerate/TokenCreate.cshtml
+++ b/ITC.InfoTrack/Areas/TokenGenerate/Views/TokenGenerate/TokenCreate.cshtml
@@ -92,7 +92,7 @@
                                         <thead class="fw-bolt" style="background-color:#f0f2f5;">
                                             <tr>
                                                 <th width="200">Catelog</th>
-                                                <th width="200">Posibility</th>
+                                                <th width="200">Problem</th>
                                                 <th id="imageupload"></th>
                                                 <th width="500"></th>
                                             </tr>
