--- a/ITC.InfoTrack/Areas/Corporate/Views/Corporate/ScheduleCreate.cshtml
+++ b/ITC.InfoTrack/Areas/Corporate/Views/Corporate/ScheduleCreate.cshtml
@@ -273,7 +273,7 @@
                                     
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody style="font-size:12px;">
                             </tbody>
                         </table>
                     </div>
