--- a/ITC.InfoTrack/Areas/TokenGenerate/Views/TokenGenerate/CategoryWiseData.cshtml
+++ b/ITC.InfoTrack/Areas/TokenGenerate/Views/TokenGenerate/CategoryWiseData.cshtml
@@ -79,7 +79,7 @@
                                     <th>Action</th>
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody style="font-size:12px;">
                                 @foreach(var item in Model)
                                 {
                                    
