--- a/ITC.InfoTrack/Views/Shared/_topbar.cshtml
+++ b/ITC.InfoTrack/Views/Shared/_topbar.cshtml
@@ -196,10 +196,10 @@
                 </div>
             </div>
 
-            <div class="dropdown d-none d-sm-inline-block">
+            <div class="dropdown d-none d-sm-inline-block" style="display:none;">
                 <button type="button" class="btn header-item waves-effect"
                         data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <img class="" src="~/images/flags/us.jpg" alt="Header Language" height="16">
+                    <img class="" src="~/images/flags/us.jpg" alt="Header Language" height="16" style="display:none;">
                 </button>
                 <div class="dropdown-menu dropdown-menu-end">
 
