--- a/ITC.InfoTrack/wwwroot/css/worker-custom.css
+++ b/ITC.InfoTrack/wwwroot/css/worker-custom.css
@@ -47,9 +47,9 @@
         padding: 1.5rem 1rem;
     }
 
-    .upload-zone {
+    /*.upload-zone {
         padding: 1.8rem 1rem;
-    }
+    }*/
 
     .upload-icon {
         font-size: 2.5rem;
